5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1723_2502.log
== TEST (2019-05-14 11:13:05) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=1
while(i <= n):
	soma = 12**(1/2) * ( (1/( (2*i+1)*(3**i) ) )*sinal)
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = 12**(1/2) * ( (1/( (2*i+1)*(3**i) ) )*sinal)
NameError: name 'sinal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:13:17) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=1
sinal=1
while(i <= n):
	soma = 12**(1/2) * ( (1/( (2*i+1)*(3**i) ) )*sinal)
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- OUTPUT:
8.5e-07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:14:31) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=1
sinal=1
while(i <= n):
	soma = 12**(1/2) * ( (1/( (2*i+1)*(3**i) ) )*sinal)
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- EXECUTION TIME:
0.130189
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
8.5e-07
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
1e-08
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-3.106e-05
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:15:14) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=1
sinal=1
while(i <= n):
	soma = 12**(1/2) * ( (1 / ( (2*i+1)*(3**i) ) )*sinal)
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- OUTPUT:
8.5e-07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:15:56) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=1
sinal=1
while(i <= n):
	soma = 12**(1/2) * ( (1 / ( (2*i+1)*(3**i) ) )*sinal)
	print((1 / ( (2*i+1)*(3**i) ) ))
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- OUTPUT:
0.1111111111111111
0.022222222222222223
0.005291005291005291
0.0013717421124828531
0.0003741114852225963
0.00010551862403714256
3.0483158055174515e-05
8.965634722110152e-06
2.673961232910045e-06
8.064327527823946e-07
2.4543605519464186e-07
8.5e-07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:16:19) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=1
sinal=1
while(i <= n):
	soma = soma + 12**(1/2) * ( (1 / ( (2*i+1)*(3**i) ) )*sinal)
	print((1 / ( (2*i+1)*(3**i) ) ))
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- OUTPUT:
0.1111111111111111
0.022222222222222223
0.005291005291005291
0.0013717421124828531
0.0003741114852225963
0.00010551862403714256
3.0483158055174515e-05
8.965634722110152e-06
2.673961232910045e-06
8.064327527823946e-07
2.4543605519464186e-07
0.32250916
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:16:26) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=1
sinal=1
while(i <= n):
	soma = soma + 12**(1/2) * ( (1 / ( (2*i+1)*(3**i) ) )*sinal)
	print((1 / ( (2*i+1)*(3**i) ) ))
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- OUTPUT:
0.1111111111111111
0.022222222222222223
0.005291005291005291
0.0013717421124828531
0.0003741114852225963
0.00010551862403714256
3.0483158055174515e-05
8.965634722110152e-06
2.673961232910045e-06
8.064327527823946e-07
2.4543605519464186e-07
0.32250916
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:16:36) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=1
sinal=1
while(i <= n):
	soma = soma + 12**(1/2) * ( (1 / ( (2*i+1)*(3**i) ) )*sinal)
	print((1 / ( (2*i+1)*(3**i) ) ))
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- OUTPUT:
0.1111111111111111
0.022222222222222223
0.005291005291005291
0.0013717421124828531
0.0003741114852225963
0.00010551862403714256
3.0483158055174515e-05
8.965634722110152e-06
2.673961232910045e-06
8.064327527823946e-07
2.4543605519464186e-07
0.32250916
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:01) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=0
sinal=1
while(i < n):
	soma = soma + 12**0.5 * ( (1 / ( (2*i+1)*(3**i) ) )*sinal)
	print((1 / ( (2*i+1)*(3**i) ) ))
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- OUTPUT:
1.0
0.1111111111111111
0.022222222222222223
0.005291005291005291
0.0013717421124828531
0.0003741114852225963
0.00010551862403714256
3.0483158055174515e-05
8.965634722110152e-06
2.673961232910045e-06
8.064327527823946e-07
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:18:15) 
-- CODE:
n = int(input("Digite o numero: "))
soma=0
i=0
sinal=1
while(i < n):
	soma = soma + 12**0.5 * ( (1 / ( (2*i+1)*(3**i) ) )*sinal)
	i=i+1
	sinal = sinal*-1
print(round(soma,8))
-- EXECUTION TIME:
0.166461
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
